overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cesi-ci-cd-dev
  labels:
    pod-security.kubernetes.io/enforce: baseline
