overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: myapp
          image: ghcr.io/julienforestier/collector-shop:2425a22c0424
          ports:
            - containerPort: 3000
