overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dev.julienforestier.pro
      secretName: myapp-tls
  rules:
    - host: "dev.julienforestier.pro"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: apiservice
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
